Added support for logarithmic units. Improved unit parser. Added "Bz" unit to database.